{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 352,
  "lineage": "f518453a-4bf3-a052-1dae-cff76e78ffcf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6fb803e582a31e9",
            "domain": "vpc",
            "id": "eipalloc-0c6fb803e582a31e9",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-13-239-105-171.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.105.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wordpress-eip",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-eip",
              "employee": "Roger Almeida"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hello-world-apache-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f5097681773b989",
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:instance/i-0ab22f5ef9e5c7b96",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab22f5ef9e5c7b96",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20240111004133332700000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f80d0dada812f66",
            "private_dns": "ip-10-0-1-137.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.137",
            "public_ip": "54.253.101.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031e2d38cec986ff6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0049bddb79a3ac7ee",
            "tags": {
              "Name": "wordpress-apache-server",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-apache-server",
              "employee": "Roger Almeida"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef748a2c7f10cea9",
              "sg-0f38977ca865488ff"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_key_pair.existing-m1-kp",
            "aws_nat_gateway.nat_gateway",
            "aws_security_group.http",
            "aws_security_group.ssh",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress-apache-vpc",
            "module.ami-ubuntu.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress-db-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f5097681773b989",
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:instance/i-0412e226593b2bbdb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0412e226593b2bbdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20240111004133332700000001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9c7791c3da96002",
            "private_dns": "ip-10-0-2-107.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034fa0aa247d36e49",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085a6b1287c22e6d1",
            "tags": {
              "Name": "wordpress-db-server",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-db-server",
              "employee": "Roger Almeida"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bed5c4fd12c54ce8",
              "sg-0f8cf74c50c6d4b4d"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_key_pair.existing-m1-kp",
            "aws_nat_gateway.nat_gateway",
            "aws_security_group.icmp",
            "aws_security_group.mysql",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress-apache-vpc",
            "module.ami-ubuntu.data.aws_ssm_parameter.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:internet-gateway/igw-0dbc921eb22ee83f5",
            "id": "igw-0dbc921eb22ee83f5",
            "owner_id": "125134798357",
            "tags": {
              "Name": "wordpress-internet-gateway",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-internet-gateway",
              "employee": "Roger Almeida"
            },
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "dependencies": [
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6fb803e582a31e9",
            "association_id": "eipassoc-0ff67f7f351c6d16e",
            "connectivity_type": "public",
            "id": "nat-02daba559494bc665",
            "network_interface_id": "eni-0f6ef288c329c8eff",
            "private_ip": "10.0.1.25",
            "public_ip": "13.239.105.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0049bddb79a3ac7ee",
            "tags": {
              "Name": "wordpress-nat-gateway",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-nat-gateway",
              "employee": "Roger Almeida"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:route-table/rtb-0a40e571068e96144",
            "id": "rtb-0a40e571068e96144",
            "owner_id": "125134798357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02daba559494bc665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-private-route-table",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-private-route-table",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:route-table/rtb-01ff62c6f3a96f6bd",
            "id": "rtb-01ff62c6f3a96f6bd",
            "owner_id": "125134798357",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbc921eb22ee83f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-public-route-table",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-public-route-table",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003e550bf08f978ce",
            "route_table_id": "rtb-0a40e571068e96144",
            "subnet_id": "subnet-085a6b1287c22e6d1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0290299a54363ac06",
            "route_table_id": "rtb-01ff62c6f3a96f6bd",
            "subnet_id": "subnet-0049bddb79a3ac7ee"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:security-group/sg-0f38977ca865488ff",
            "description": "Allow inbound and outbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0f38977ca865488ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http",
            "name_prefix": "",
            "owner_id": "125134798357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-http-sg",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-http-sg",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:security-group/sg-0bed5c4fd12c54ce8",
            "description": "Allow inbound and outbound HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bed5c4fd12c54ce8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "icmp",
            "name_prefix": "",
            "owner_id": "125134798357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ping-sg",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-ping-sg",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:security-group/sg-0f8cf74c50c6d4b4d",
            "description": "Allow inbound MySQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0f8cf74c50c6d4b4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql",
            "name_prefix": "",
            "owner_id": "125134798357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-mysql-sg",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-mysql-sg",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:security-group/sg-0ef748a2c7f10cea9",
            "description": "Allow inbound SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef748a2c7f10cea9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh",
            "name_prefix": "",
            "owner_id": "125134798357",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-ssh-sg",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-ssh-sg",
              "employee": "Roger Almeida"
            },
            "timeouts": null,
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:subnet/subnet-085a6b1287c22e6d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085a6b1287c22e6d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125134798357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-private-subnet",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-private-subnet",
              "employee": "Roger Almeida"
            },
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "dependencies": [
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:subnet/subnet-0049bddb79a3ac7ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0049bddb79a3ac7ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "125134798357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-public-subnet",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-public-subnet",
              "employee": "Roger Almeida"
            },
            "vpc_id": "vpc-09cb8a9b7bda94c23"
          },
          "dependencies": [
            "aws_vpc.wordpress-apache-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wordpress-apache-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:125134798357:vpc/vpc-09cb8a9b7bda94c23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01e3953c6e89100e0",
            "default_route_table_id": "rtb-0c067fa265c827a5e",
            "default_security_group_id": "sg-0a057e5881a8cb767",
            "dhcp_options_id": "dopt-ac8188cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09cb8a9b7bda94c23",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c067fa265c827a5e",
            "owner_id": "125134798357",
            "tags": {
              "Name": "wordpress-apache-vpc",
              "employee": "Roger Almeida"
            },
            "tags_all": {
              "Name": "wordpress-apache-vpc",
              "employee": "Roger Almeida"
            }
          }
        }
      ]
    }
  ]
}